# fur_renderer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  gl.cpp  gl.hpp  main.cpp  shaders.hpp  types.hpp
assets/models/box_textured/: BoxTextured.gltf
assets/models/duck_centered/: Duck.gltf
assets/models/suzanne/: Suzanne.gltf
